[gd_scene load_steps=10 format=3 uid="uid://debhruqvkbw1c"]

[ext_resource type="Script" uid="uid://d0pgl6k41vxjv" path="res://scripts/glassbridge/glsbrg.gd" id="1_h21dd"]
[ext_resource type="PackedScene" uid="uid://bwcufv5r8ctl8" path="res://scenes/glassbridge/platforms.tscn" id="2_btr28"]
[ext_resource type="PackedScene" uid="uid://cb7312hk6qiee" path="res://scenes/glassbridge/killzone.tscn" id="3_btr28"]
[ext_resource type="PackedScene" uid="uid://dhc5s4y7x8m0t" path="res://scenes/glassbridge/hud.tscn" id="4_hud"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_p8882"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_7pxbb"]
sky_material = SubResource("ProceduralSkyMaterial_p8882")

[sub_resource type="Environment" id="Environment_u48pd"]
background_mode = 2
sky = SubResource("Sky_7pxbb")
tonemap_mode = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_dflkw"]
size = Vector3(11, 1.017456, 39)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_h21dd"]

[node name="Game2" type="Node3D"]
script = ExtResource("1_h21dd")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_u48pd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.9342045, -0.268415, 0.23497954, 0, 0.65868944, 0.75241494, -0.35673803, -0.7029094, 0.6153506, 0, 0.6949854, 0)
shadow_enabled = true

[node name="Platforms" parent="." instance=ExtResource("2_btr28")]

[node name="FinishPlatform" parent="Platforms" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 105.25518, 1.9073486e-06, 12.926406)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platforms/FinishPlatform/Goal" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.008728027, 0)
shape = SubResource("BoxShape3D_dflkw")

[node name="Timer" type="Timer" parent="Platforms/FinishPlatform/Goal" index="1"]
wait_time = 4.0

[node name="Glass1" parent="Platforms" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 42.415646, 1.9073486e-06, 11.745406)

[node name="Glass2" parent="Platforms/Layer2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 53.935375, 3.8146973e-06, 22.781857)

[node name="Glass3" parent="Platforms/Layer2" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 53.935375, 3.8146973e-06, 2.4195118)

[node name="Glass4" parent="Platforms/Layer3" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 63.11626, 0.01736641, -2.7196045)
size = Vector3(6, 1, 4)

[node name="Glass5" parent="Platforms/Layer3" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 63.11626, 0.01736641, 7.6983643)
size = Vector3(6, 1, 4)

[node name="Glass6" parent="Platforms/Layer3" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 63.11626, 0.01736641, 18.088573)
size = Vector3(6, 1, 4)

[node name="Glass7" parent="Platforms/Layer3" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 63.11626, 0.01736641, 27.377186)
size = Vector3(6, 1, 4)

[node name="Glass8" parent="Platforms/Layer4" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 70.98013, 0.01736641, -4.7196045)
size = Vector3(6, 1, 4)

[node name="Glass9" parent="Platforms/Layer4" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 70.98013, 0.01736641, 0.2803955)
size = Vector3(6, 1, 4)

[node name="Glass10" parent="Platforms/Layer4" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 70.98013, 0.01736641, 5.2803955)
size = Vector3(6, 1, 4)

[node name="Glass11" parent="Platforms/Layer4" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 70.98013, 0.01736641, 10.2803955)
size = Vector3(6, 1, 4)

[node name="Glass12" parent="Platforms/Layer4" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 70.98013, 0.01736641, 15.2803955)
size = Vector3(6, 1, 4)

[node name="Glass13" parent="Platforms/Layer4" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 70.98013, 0.01736641, 20.280396)
size = Vector3(6, 1, 4)

[node name="Glass14" parent="Platforms/Layer4" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 70.98013, 0.01736641, 25.280396)
size = Vector3(6, 1, 4)

[node name="Glass15" parent="Platforms/Layer4" index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 70.98013, 0.01736641, 30.280396)
size = Vector3(6, 1, 4)

[node name="Glass16" parent="Platforms/Layer5" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 79.12882, 0.01748848, -2.1126747)
size = Vector3(6, 1, 4)

[node name="Glass17" parent="Platforms/Layer5" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 79.12882, 0.01748848, 2.8873255)
size = Vector3(6, 1, 4)

[node name="Glass18" parent="Platforms/Layer5" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 79.12882, 0.01748848, 7.8873253)
size = Vector3(6, 1, 4)

[node name="Glass19" parent="Platforms/Layer5" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 79.12882, 0.01748848, 12.887325)
size = Vector3(6, 1, 4)

[node name="Glass20" parent="Platforms/Layer5" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 79.12882, 0.01748848, 17.887325)
size = Vector3(6, 1, 4)

[node name="Glass21" parent="Platforms/Layer5" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 79.12882, 0.01748848, 22.887325)
size = Vector3(6, 1, 4)

[node name="Glass22" parent="Platforms/Layer5" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 79.12882, 0.01748848, 27.887325)
size = Vector3(6, 1, 4)

[node name="Glass23" parent="Platforms/Layer5" index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 79.12883, 0.01748848, 32.887325)
size = Vector3(6, 1, 4)

[node name="Glass24" parent="Platforms/Layer6" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 87.023796, 0.01748848, -4.537258)
size = Vector3(6, 1, 4)

[node name="Glass25" parent="Platforms/Layer6" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 87.023796, 0.01748848, 0.4627421)
size = Vector3(6, 1, 4)

[node name="Glass26" parent="Platforms/Layer6" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 87.023796, 0.01748848, 5.462742)
size = Vector3(6, 1, 4)

[node name="Glass27" parent="Platforms/Layer6" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 87.023796, 0.01748848, 10.462742)
size = Vector3(6, 1, 4)

[node name="Glass28" parent="Platforms/Layer6" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 87.023796, 0.01748848, 15.462742)
size = Vector3(6, 1, 4)

[node name="Glass29" parent="Platforms/Layer6" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 87.023796, 0.01748848, 20.462742)
size = Vector3(6, 1, 4)

[node name="Glass30" parent="Platforms/Layer6" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 87.023796, 0.01748848, 25.462742)
size = Vector3(6, 1, 4)

[node name="Glass31" parent="Platforms/Layer6" index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 87.0238, 0.01748848, 30.462742)
size = Vector3(6, 1, 4)

[node name="Glass32" parent="Platforms/Layer7" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 94.858826, 0.01748848, -2.0153408)
size = Vector3(6, 1, 4)

[node name="Glass33" parent="Platforms/Layer7" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 94.858826, 0.01748848, 2.9846594)
size = Vector3(6, 1, 4)

[node name="Glass34" parent="Platforms/Layer7" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 94.858826, 0.01748848, 7.984659)
size = Vector3(6, 1, 4)

[node name="Glass35" parent="Platforms/Layer7" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 94.858826, 0.01748848, 12.984659)
size = Vector3(6, 1, 4)

[node name="Glass36" parent="Platforms/Layer7" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 94.858826, 0.01748848, 17.98466)
size = Vector3(6, 1, 4)

[node name="Glass37" parent="Platforms/Layer7" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 94.858826, 0.01748848, 22.98466)
size = Vector3(6, 1, 4)

[node name="Glass38" parent="Platforms/Layer7" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 94.858826, 0.01748848, 27.98466)
size = Vector3(6, 1, 4)

[node name="Glass39" parent="Platforms/Layer7" index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 94.85883, 0.01748848, 32.98466)
size = Vector3(6, 1, 4)

[node name="Killzone" parent="." instance=ExtResource("3_btr28")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Killzone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)
shape = SubResource("WorldBoundaryShape3D_h21dd")
debug_color = Color(0.050708726, 0.5730574, 0.83116233, 0.878)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://b2w3t6p82gxcs")
spawn_path = NodePath("..")
spawn_limit = 4

[node name="HUD" parent="." instance=ExtResource("4_hud")]

[connection signal="body_entered" from="Platforms/FinishPlatform/Goal" to="." method="_on_goal_body_entered"]
[connection signal="timeout" from="Platforms/FinishPlatform/Goal/Timer" to="." method="_on_timer_timeout"]

[editable path="Platforms"]
